Update profile page and backend schema; add Domain Quiz component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>CareerConnect - Your Career Journey Starts Here</title>
     <style>
       /* Ensure dark mode applies globally */
@@ -12,7 +12,7 @@
         background-color: #111827;
         color: white;
         margin: 0;
-        font-family: 'Inter', sans-serif;
+        font-family: 'Poppins', sans-serif;
       }
 
       /* Essential Animations */
